<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="EtherCATCommandsFrmCLC" Id="{f45c8789-c193-4359-8789-b837a372d8e7}">
    <Declaration><![CDATA[TYPE EtherCATCommandsFrmCLC :
STRUCT
	//Commands from CLC  ETHERCAT IN
	//state control enum type. 
	StatControlCMD : BessStateControl;
	OpModeControlCMD : BessOpmodeControl;
	//P Q references. 
	ActivePowerReference : DINT;
	ReactivePowerReference: DINT;
	Heartbeat : DINT;
	ClrAlarm : DINT;
	ClrFault : DINT;
	reserve1 : DINT;
	reserver2 : DINT;
	
	
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>