<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="StateMachineCommand" Id="{8e7ddb72-5d70-4010-95e3-4f3ef986eeae}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE StateMachineCommand  :
(
	OFF := 0,
	DISCONNECTED:= 1,
	CONNECTED := 2,
	OPERATIONAL := 3,
	FAULT := 4
) INT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>